# cresca

./: .env  .env.example  Cargo.toml  README.md  config.toml.example  events.move  loan_position.move
circuits/: Nargo.toml  compile.sh  execute.sh  run.sh
circuits/claim/: Nargo.toml  Prover.toml
circuits/claim/src/: main.nr
circuits/helpers/: Nargo.toml
circuits/helpers/src/: LeanIMTInclusionProof.nr  blake3Hasher.nr  commitment.nr  lib.nr
circuits/withdrawOrTransfer/: Nargo.toml  Prover.toml
circuits/withdrawOrTransfer/src/: main.nr
cresca_main/: account.move  basic.move  config.move  constants.move  errors.move  events.move  fee.move  gov.move  immediate_settlement.move  liquidation.move  managed_coin.move  market_registry.move  oracle_adapter.move  perp_engine.move  positions.move  risk.move  vault.move  vault_coin.move
indexer/: Cargo.toml
indexer/abi/: ClearingHouseV2.json  PrivacyProxy.json  TokenPool.json
indexer/db/: db
indexer/src/: api.rs  config.rs  database.rs  indexer.rs  main.rs  models.rs
oracle/: Cargo.toml
oracle/abi/: Oracle.json
oracle/src/: main.rs
rust-indexer/: Cargo.toml  Dockerfile  README.md  example.config.yaml
rust-indexer/src/: health_check_server.rs  lib.rs  main.rs
rust-indexer/src/config/: indexer_processor_config.rs  mod.rs  processor_config.rs
rust-indexer/src/db_migrations/: diesel.toml  schema.rs
rust-indexer/src/db_models/: ledger_info.rs  message.rs  mod.rs  module_upgrade.rs  package_upgrade.rs  processor_status.rs  (+1 more)
sources/: deposit_slot.move  loan_slot.move
sources/utils/: math.move
src/: bot_api.rs  extractor.ts  lib.rs  main.rs  storer.ts  streamTx.ts  utils.ts
src/abi/: message_board_abi.ts
src/aptos/: client.rs  mod.rs  types.rs
src/market_data/: feed.rs  mod.rs  parser.rs
src/risk/: manager.rs  mod.rs
src/trading/: executor.rs  mod.rs  strategy.rs
src/utils/: config.rs
swap_move/: CrossChainBridge.move  CrossChainSwapAptos.move  GenericCrossChainSwap.move  MockUSDC.move  TokenRegistry.move
tests/: integration_tests.rs
(+30 files in other folders)
