[package]
name = "aptos-hft-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Crypto and encoding
ed25519-dalek = "2.0"
hex = "0.4"
url = "2.4"
sha2 = "0.10"
sha3 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenv = "0.15"
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Numerical computations
rust_decimal = "1.32"

# Random number generation
rand = "0.8"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# WebSocket support for real-time data
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Rate limiting
governor = "0.5"

# Database (optional for storing trading data)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Metrics and monitoring
prometheus = "0.13"
bcs = "0.1.6"
serde_bytes = "0.11.19"
actix-web = "4.11.0"
